--- a/playlist/static/playlist/css/playlist.css
+++ b/playlist/static/playlist/css/playlist.css
@@ -56,6 +56,8 @@ input::-ms-input-placeholder {
     overflow : hidden;
     width : calc(25% - 20px);
     text-align : center;
+    /* 추가된 style */
+    position: relative; 
 }
 
 /* 플레이리스트 이미지 : 너비 및 높이 자동 설정 */
@@ -73,4 +75,17 @@ input::-ms-input-placeholder {
 .playlist-info h2 {
     font-size : 18px;
     margin : 10px 0 5px;
+}
+
+/* 추가된 style */
+/* 찜버튼 위치 absolute라서 원하는 위치로 배치 가능 */
+.zzim-button {
+    position: absolute;
+    top: 170px;
+    right: 17px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: none;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
 }
