--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -22,6 +22,7 @@
             <input type="file" id="file-input" style="display:none;"><br>
         </div>
         <button type="submit">수정</button>
+        <button type="button" id="delete-button">삭제</button>
     </form>
 </div>
 
