--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -20,17 +20,19 @@
 </div>
 
 <div class="menu">
-    <a href="#" class="active">내 게시글 목록</a>
-    <a href="#">찜한 게시글 목록</a>
+    <a href="#" id="posts-link">내 게시글 목록</a>
+    <a href="#" id="liked-posts-link">좋아요 누른 게시글 목록</a>
     <a href="#" id="zzim-playlist-link">찜한 노래 목록</a>
-
     <a href="#" id="coach-list-link">내가 받은 훈수</a>
 
 </div>
 
+<div id="post-container" class="post-container"></div>
+<div id="liked-post-container" class="liked-post-container"></div>
 <div id="zzim-playlist-container" class="playlist-container"></div>
-
 <div id="coach-container" class="coach-container"></div>
+
+
 
 <script src="{% static 'accounts/js/profile.js' %}"></script>
 
