--- a/coach/static/coach/css/coach.css
+++ b/coach/static/coach/css/coach.css
@@ -7,6 +7,13 @@
     src: url(https://cdn.jsdelivr.net/gh/webfontworld/SCoreDream/SCoreDream5.woff2) format('woff2'),
 }
 
+@font-face {
+    font-family: 'SCoreDream-300';
+    font-weight: 300;
+    font-style: normal;
+    src: url(https://cdn.jsdelivr.net/gh/webfontworld/SCoreDream/SCoreDream3.woff2) format('woff2'),
+}
+
 /* 전체 텍스트를 중앙에 정렬 */
 .coach-container {
     text-align: center;
@@ -31,21 +38,21 @@ h1 {
 
 /* placeholder (입력 필드)의 스타일 설정 */
 input::-webkit-input-placeholder {
-    font-family: 'SCoreDream-500';
+    font-family: 'SCoreDream-300';
     font-size: 16px; 
     opacity: 0.5; 
     padding: 5px; 
     color: #fff; 
 }
 input::-moz-placeholder {
-    font-family: 'SCoreDream-500';
+    font-family: 'SCoreDream-300';
     font-size: 16px; 
     opacity: 0.5; 
     padding: 5px; 
     color: #fff; 
 }
 input::-ms-input-placeholder {
-    font-family: 'SCoreDream-500';
+    font-family: 'SCoreDream-300';
     font-size: 16px; 
     opacity: 0.5; 
     padding: 5px; 
@@ -55,7 +62,7 @@ input::-ms-input-placeholder {
 /* 인풋 제목 (원곡링크, 녹음파일) 폰트 크기와 하단 마진 설정 */
 .input-container h2 {
     font-size: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 /* input 필드의 텍스트 정렬, 배경, 테두리 등 설정 */
@@ -63,42 +70,43 @@ input {
     background-color:transparent;
     text-align: center;
     color: #fff;
-    width: 80%;
+    width: 100%;
     height: 55px;
     font-size: 23px;
     padding: 5px 10px;
     margin-bottom: 20px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
     box-sizing: border-box;
 }
 
 /* 입력 값을 중앙에 정렬하고 마진 */
 .input-group {
-    display: center;
-    flex-direction: column;
-    width: 80%;
+    display: flex;
+    justify-content: center;
+    width: 90%;
     margin: 0 auto 20px;
 }
 
 /* 버튼 컨테이너의 마진과 정렬 */
 .button-container {
-    margin-top: 10px;
-    align-self: flex-end;
-    margin-left: 60%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* 버튼의 색상, 폰트, 크기 등 설정 */
 .button {
     background-color:transparent;
-    font-family: 'SCoreDream-500';
+    font-family: 'SCoreDream-300';
     color: #fff;
-    width: 95px;
-    height: 42px;
+    width: 17%;
+    height: 46px;
     font-size: 15px;
+    margin-right: 30px;
     padding: 5px 10px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
     box-sizing: border-box;
     cursor: pointer;
 }
@@ -107,4 +115,31 @@ input {
 .input-song {
     font-family: 'SCoreDream-500';
     color: #fff;
+}
+
+
+/* '선택된 파일 없음' input칸 스타일(파일 이름 보여질 자리)  */
+#file-name{
+    display: flex;
+    justify-content: center;
+    font-family: 'SCoreDream-300';
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.584);
+    padding: 15px 155px;
+    margin-right: 8px;
+    border: 1px solid;
+    border-color: #fff;
+    border-radius: 5px;
+}
+
+
+/* '파일선택'버튼 스타일 조절 */
+.file-choice-btn{
+    font-family: 'SCoreDream-300';
+    font-size: 16px;
+    padding: 15px 15px;
+    margin: 0 2px;
+    border: 1px solid;
+    border-color: #fff;
+    border-radius: 5px;
 }
